<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="title_activity_main_dash_board">MainDashBoardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">tagteen</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="Red_1">Tutorial</string>
    <string name="tab1">Tagteen</string>
    <string name="tab2">Login Activity</string>
    <string name="tab3">Tutorial</string>
    <string name="title_activity_otpentry">Sign in</string>
    <string name="updateStory">Update Story</string>
    <string name="createStory">Create Story</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseFromLibrary">Choose from Library</string>
    <string name="addImagesToStory">Add images to Story</string>
    <string name="cancel_text">Cancel</string>
    <string name="selectPicture">Select Picture</string>
    <string name="uploadComplete">Upload complete</string>
    <string name="uploadFailedPleaseTryAgain">Upload failed, please try again</string>
    <string name="video_edit_segment">Set the clip you want to capture</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="string_help_text">
The current application lacks necessary permissions.\n\n
Please click \"Settings\"-\"Permissions\"-to open the required permissions.\n\nFinally, click the back button twice to return.</string>
    <string name="quit">quit</string>
    <string name="general.label.pleasewait">Please wait</string>
    <string name="general.label.error">Error</string>
    <string name="general.label.ok">OK</string>
    <string name="general.label.yes">Yes</string>
    <string name="general.label.no">No</string>
    <string name="general.label.cancel">Cancel</string>
    <string name="general.button.next">Next</string>
    <string name="signup.error.registration">Please do not register</string>
    <string name="signup.error.registration.age">You are not in age Criteria for Application use!</string>
    <string name="imageupload.error.noface">You\'re Not Verified take the selfie again</string>
    <string name="imageupload.label.upload">Upload your selfie</string>
    <string name="imageupload.label.description">For your safety \n we dont allow fake accounts</string>
    <string name="imageupload.label.proudtobeindian">Proud to be an Indian</string>
    <string name="imageupload.label.agreetoallterms">Agree to all terms and policies</string>
    <string name="yestarday">Yesterday</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">Ok</string>
    <string name="settings_video_quality_title">Video size %s</string>
    <string name="settings_photo_quality_title">Photo size</string>
    <string name="preview_controls_confirm">Save</string>
    <string name="preview_controls_retake">Repeat</string>
    <string name="preview_controls_cancel">Cancel</string>
    <string name="preview_controls_crop">Crop</string>
    <string name="preview_controls_original_ratio_label">Original</string>
    <string name="hint">Type emoji here</string>
    <string name="i_love_emojicon">I \ue32d emojicon</string>
    <string name="use_system_default">Use system default emojicon</string>
    <string name="tutorial1">Connect with \n Like-minded teens</string>
    <string name="title_activity_main_tutorial">MainTutorialActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_ex">Ex</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="enter_email_message">Enter your mobile number below and we will \n send you  a verification code to reset your password</string>
    <string name="enter_email_message2">Click the secure link we sent you to reset your password.If you did not receive an email, check your spam folder </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_camera_capture">CameraCaptureActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="texture_view">TextureView</string>
    <string name="exoplayer_sample">ExoPlayer sample</string>
    <string name="no_connection">Please check your network connection</string>
    <string name="trending_videos">Trending Videos</string>
    <string name="tech_videos">Tech Videos</string>
    <string name="gaming_videos">Gaming Videos</string>
    <string name="musical_videos">Musical Videos</string>
    <string name="dancing_videos">Dancing Videos</string>
    <string name="funny_videos">Funny Videos</string>
    <string name="acting_videos">Acting Videos</string>
    <string name="education_videos">Education Videos</string>
    <string name="short_shows">ShortShows</string>
    <string name="featured_trailer">Featured Trailer</string>
    <string name="trailers">Trailers</string>
    <string name="movie_shows">MovieShows</string>
    <string name="clips">Clips</string>
    <string name="upcoming_liveshows">Upcoming Liveshows</string>
    <string name="mediaplayer_sample">MediaPlayer sample</string>
    <string name="exoplayerview_sample">ExoPlayer with controls sample</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="activity_show_case">Toro v2 Showcase</string>
    <string name="sample">
    GitHub Wiki is a simple way to let others contribute content. Any GitHub user can create and
    edit pages to use for documentation, examples, support, or anything you wish.
  </string>
    <string name="readme">
    Video list auto playback made simple, specially built for RecyclerView
  </string>
    <string name="basic_sample_4">
    Basic Sample 4: Official SimpleExoPlayerView
  </string>
    <string name="basic_sample_4_description">
    <![CDATA[This demo show the use of Official SimpleExoPlayerView.
    It is the same with Basic sample 1, accept for the Player View in used.]]>
  </string>
    <string name="single_item">
    Single Item
  </string>
    <string name="single_item_description">
    <![CDATA[A \'list\' that contains only one Media Item]]>
  </string>
    <string name="basic_sample_1">
    Basic Sample 1: Minimal
  </string>
    <string name="basic_sample_1_description">
    <![CDATA[In this sample, we learn how to implement very simple Video ViewHolder and Video list and
    add Toro support into the App.]]>
  </string>
    <string name="basic_sample_2">
    Basic Sample 2: Minimal, Ordered
  </string>
    <string name="use_tagteen_daily">USE TAGTEEN DAILY AND WIN CASH PRIZES DAILY</string>
    <string name="supporters">SUPPORTERS</string>
    <string name="lakh_scholarship">Upto 1 Lakh Scholarships &amp; Rewards</string>
    <string name="claim">Claim</string>
    <string name="upload_finest_video">Upload your finest talent videos and win a headphone</string>
    <string name="earn_daily_u_rock">Earn upto Rs. 1000 daily on your Talent video</string>
    <string name="confirm_mobile_text">Confirm your mobile number linked to any of these accounts</string>
    <string name="mobile_number">Mobile number</string>
    <string name="save">Save</string>
    <string name="money_deposited">Money will be deposited weekly to your above nominated account</string>
    <string name="terms_of_rewards">Terms of Tagteen rewards</string>
    <string name="tagteen_rockstars">Tagteen Rockstar</string>
    <string name="tagteen_rockstars_title">To promote the young talents in the country, Tagteen launches “Tagteen Rockstar”</string>
    <string name="tagteen_rockstars_desc">Every month 10 Rockstars will be chosen on the basis of their Talent, Talent Videos, Popularity and consistency.</string>
    <string name="tagteen_rockstars_desc2">In Tagteen, Anyone can be a Rockstar...</string>
    <string name="tagteen_rewards">Tagteen Rewards</string>
    <string name="tagteen_rewards_info">1 U Rock = 1 Rupee*</string>
    <string name="rewards_terms_and_conditions">1. Only talent videos where your face or your voice should be there\n\n
        2. No tiktok or like or vigo or share chat or any videos from other tagteenApplication are allowed.\n\n
        3. No status or lyrical videos are allowed.\n\n
        4. Please edit your videos before uploading to gain more popularity.\n\n
        5. Please upload 1 video maximum a day.\n\n
        6. Payments are weekly Sunday and Monday. Your first payment is after 7days to the closest weekend.\n\n
        7. If its a knowledge /technical/gaming or any other appropriate video, please add properly made introduction and close to the video containing the topic and any other information you feel necessary.\n\n
        8. GAMEPLAYS ARE NOT ALLOWED. Only gaming reviews, tips and tricks with your voice explaining the video are allowed.\n\n
        9. If it\'s a screen recording the tagteen logo in the tagteenApplication installed should be visible at some point during the recording.\n\n
        10. If you do not upload a minimum 2 videos a week, your rewards for that week will not be paid until you start uploading videos again. Your rewards never lapse.\n\n
        11. You need a minimum of 500 Supporters to start getting rewards from tagteen. Maximum weekly rewards are given below.</string>
    <string name="weekly_rewards">Weekly Rewards</string>
    <string name="weekly_rewards_desc">0-500 Supporters = No rewards(Bonus only)\n500-2000 Supporters = 100\n2000-5000 Supporters = 500\n5000-10000 Supporters = 1000</string>
    <string name="conditions_apply">*Conditions given above apply.\n*Only most recent reward structure will supercede all rewards offered before.</string>
    <string name="reserved_rights">Tagteen reserves the right to remove any video at any time with or without communicating with the user if it’s deemed unfit for a talent video or in violation of our policy.</string>
</resources>