<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tagteenApplication="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:tint="@color/black"
            tagteenApplication:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imgBack"
            android:gravity="center"
            android:text="@string/terms_of_rewards"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layoutHeader"
        android:background="@color/list_divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold"
                android:text="@string/tagteen_rockstars"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:textStyle="bold"
                android:text="@string/tagteen_rockstars_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:text="@string/tagteen_rockstars_desc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:textStyle="bold"
                android:text="@string/tagteen_rockstars_desc2"/>

            <TextView
                android:id="@+id/lblRockstarPriceDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold"
                android:text="@string/tagteen_rewards"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:textStyle="bold"
                android:text="@string/tagteen_rewards_info"/>

            <TextView
                android:id="@+id/lblTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/full_black"
                android:text="@string/rewards_terms_and_conditions"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:textStyle="bold"
                android:text="@string/weekly_rewards"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/full_black"
                android:text="@string/weekly_rewards_desc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/full_black"
                android:text="@string/conditions_apply"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/full_black"
                android:textStyle="bold"
                android:text="@string/reserved_rights"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
